--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,339 @@ a {
     color-scheme: dark;
   }
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root{
+  --clr:#14161e;  
+}
+body{
+  min-height: 100vh;
+  background: var(--clr);
+}
+.sidebar{
+  position: absolute;
+  width: 70px;
+  height: 100vh;
+  background: #fff;
+  transition: 0.5s;
+  padding-left: 10px;
+  overflow: hidden;
+}
+.sidebar.active{
+  width: 300px;
+}
+.sidebar ul{
+  position: relative;
+  height: 100vh;
+}
+.sidebar ul li{
+  position: relative;
+  list-style: none;
+}
+.sidebar ul li.active{
+  background: #eac1b6;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;   
+}
+.sidebar ul li.active::before{
+  content: '';
+  position: absolute;
+  top: -20px;
+  right: 0;
+  border-bottom-right-radius: 20px;
+  box-shadow: 5px 5px 0 5px #eac1b6;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+}
+.sidebar ul li.active::after{
+  content: '';
+  position: absolute;
+  bottom: -20px;
+  right: 0;
+  border-top-right-radius: 20px;
+  box-shadow: 5px -5px 0 5px #eac1b6;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+}
+.sidebar ul li.logo{
+  margin-bottom: 30px;
+}
+.sidebar ul li.logo .icon{
+  font-size: 2em;
+  color: var(--clr);   
+}
+.sidebar ul li.logo .text{
+  font-size: 1em;
+  font-weight: 500;
+  color: var(--clr);   
+}
+.sidebar ul li a {
+  position: relative;
+  display: flex;
+  white-space: nowrap;
+  text-decoration: none;
+}
+.sidebar ul li a .icon{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 60px;
+  height: 70px;
+  font-size: 1.5em;
+  color: #333;
+  transition: 0.5s;
+}
+.sidebar ul li a .text{
+  position: relative;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  font-size: 1em;
+  color: #333;
+  padding-left: 15px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+}
+.sidebar ul li.active a .icon{
+  color: #fff;
+}
+.sidebar ul li.active a .text{
+  color: var(--bg);
+}
+.sidebar ul li.active a .icon::before{
+  content: '';
+  position: absolute;
+  inset: 5px;
+  background: transparent;
+  border: #fff;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.sidebar ul li:hover.active a .icon::before{
+  color: var(--bg);
+}
+.sidebar ul li a:hover .icon,
+.sidebar ul li a:hover .text{
+  color: var(--bg);
+}
+.bottom{
+  position: absolute;
+  bottom: 1;
+  top: 1;
+  width: 100%;
+
+}
+.image img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+.image{
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.menuToggle{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  background: #be4f30;;
+  z-index: 100;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+.menuToggle::before{
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background: #fff;
+  transform: translateY(-9px);
+  transition: 0.5s;
+  box-shadow: 0 9px 0 #fff;
+}
+.menuToggle::after{
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 3px;
+  background: #fff;
+  transform: translateY(9px);
+  transition: 0.5s;
+}
+.menuToggle.active::before{
+  transform: translateY(0px) rotate(45deg);
+  box-shadow: 0 0 0 #fff;
+}
+.menuToggle.active::after{
+  transform: translateY(0px) rotate(-45deg);
+  box-shadow: 0 0 0 #fff;
+}
+
+/** Sticky Styles **/
+.sticky-navbar {
+  position: sticky;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Align items to the right side */
+  justify-content: center; /* Vertically center the navbar */
+  height: 50vh; /* Adjust the height to cover the full viewport */
+}
+
+.sticky-navbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 25px 0 0;
+}
+
+.sticky-navbar li {
+  margin-bottom: 10px;
+}
+
+.sticky-navbar a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #333;
+  text-decoration: none;
+}
+
+.sticky-navbar a:hover {
+  background-color: #b54d30;
+}
+
+/* Hero Section*/
+.hero-section {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-image: url('../public/bg-head.webp'); */
+  background-size: cover;
+  width: 100%;
+  max-height: 70vh;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 30px;
+  margin-left: 100px;
+  gap: 15px;
+}
+
+.hero-content h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+  color:  #be4f30;
+}
+
+.hero-content p {
+  font-size: 2rem;
+  color: #fff;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.heroBtn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+  width: 40%;
+  border: none;
+  background-color: #fff;
+  border-radius: 30px;
+  color:  #be4f30;
+  font-weight: 600;
+  font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+cursor: pointer;
+}
+
+.heroBtn:hover{
+  background-color:  #be4f30;
+  color: whitesmoke;
+}
+
+#app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.work{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background-color: #b54d30;
+  margin-top: 20px;
+  padding: 20px 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 25px;
+  font-weight: 600;
+  font-display: fallback;
+  
+    }
