--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,10 +1,10 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content: flex-start;
+  /* align-items: flex-start; */
+  /* min-height: 100vh; */
+  background-color: #fff;
 }
 
 .description {
@@ -227,3 +227,68 @@
     transform: rotate(0deg);
   }
 }
+
+.background {
+  background-image: url('../public/bg-head.webp');
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.sticky{
+  position: sticky;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-top: 150px;
+}
+
+/* Section Style*/
+
+/* .main {
+   display: flex;
+  justify-content: center;
+   align-items: center;
+  width: 100%;
+     background-color: #f0f0f0;
+     gap: 20px;
+   }
+  
+   .container {
+     display: flex;
+     gap: 10px;
+     max-width: 60vw;
+   }
+  
+   .imageContainer {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     align-content: center;
+     cursor: pointer;
+   }
+  
+   .image {
+     width: 300px;
+     height: 300px;
+     object-fit: cover;
+   }
+  
+   .imageDescription {
+     display: flex;
+    justify-content: center;
+   align-items: center;
+     align-content: center;
+     width: 100%;
+     height: 50px;
+     background-color: #000000;
+    opacity: 0.5;
+   }
+  
+  .imageDescriptionText {
+    color: #ffffff;
+   font-size: 16px;
+   font-weight: bold;
+   } */
