--- a/app/Profile.module.css
+++ b/app/Profile.module.css
@@ -1,52 +1,82 @@
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+ /* ProfilePage.js */
+ .profile-container {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 20px;
   
-  header {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  section {
-    margin-bottom: 40px;
-  }
-  
-  h1 {
-    font-size: 2rem;
-    font-weight: bold;
-  }
-  
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
-  ul {
-    list-style: disc;
-    padding-left: 20px;
-  }
-  
-  .ctaButton {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #0070f3;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .ctaButton:hover {
-    background-color: #0053b3;
-  }
-  
-  .imageContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
+}
+
+.profile-zion {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+  background: #14161e border-box;
+  border: 2px solid #fff;
+  border-top-right-radius: 100px;
+  border-top-left-radius: 100px;
+}
+
+.profile-zion h1{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  color: #fff;
+}
+
+.profile-section {
+  margin-bottom: 40px;
+  padding: 20px;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.profile-section-about {
+  background-color: #0070f3;
+}
+
+.profile-section-stacks {
+  background-color: #34d399;
+}
+
+.profile-section-owner {
+  background-color: #f59e0b;
+}
+
+.profile-section-image {
+  background-color: #f472b6;
+}
+
+.profile-section h2 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.profile-section p {
+  margin-top: 10px;
+}
+
+.profile-section ul {
+  list-style: disc;
+  padding-left: 20px;
+}
+
+.profile-ctaButton {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #0070f3;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.profile-ctaButton:hover {
+  background-color: #0053b3;
+}
+
+.profile-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
